--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,13 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - hhvm
+  - 7.2
+  - 7.3
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar --dev install
+  - composer self-update
 
-script: vendor/bin/phpunit --configuration tests/phpunit.xml
+install:
+  - composer install
 
-matrix:
-  allow_failures:
-    - php: hhvm
+script: vendor/bin/phpunit
