--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,38 @@
 {
-    "name": "psliwa/php-pdf",
-    "description": "Pdf and graphic files generator library for PHP.",
-    "keywords": ["PDF", "PHPPdf"],
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name":     "Piotr Śliwa",
-            "homepage": "http://ohey.pl",
-            "email":    "peter.pl7@gmail.com"
-        }
-    ],
-    "require": {
-        "zendframework/zendpdf":  "~2.0.0",
-        "zendframework/zend-cache":  "^2.0"
-    },
-    "require-dev": {
-        "zendframework/zend-barcode": "^2.0",
-        "zendframework/zend-validator": "^2.0",
-        "imagine/Imagine": ">=0.2.0,<0.6.0",
-        "phpunit/phpunit": ">=4,<5.4.0"
-    },
-    "suggest": {
-    	"zendframework/zend-barcode":  "If you want to use barcodes",
-    	"zendframework/zend-validator": "If you want to use barcodes (required by zend-barcode)",
-    	"imagine/Imagine": "If you want to use image generating (required version: >=v0.2.6)"
-    },
-    "autoload": {
-        "psr-0": { "PHPPdf": "lib/", "Imagine": "lib/" }
+  "name": "psliwa/php-pdf",
+  "type": "library",
+  "description": "Pdf and graphic files generator library for PHP.",
+  "keywords": [
+    "PDF",
+    "PHPPdf"
+  ],
+  "license": "MIT",
+  "authors": [],
+  "require": {
+    "php": "^7.2",
+    "ext-libxml": "*",
+    "ext-xmlreader": "*",
+    "zendframework/zend-cache": "^2.0",
+    "zendframework/zendpdf": "~2.0.0"
+  },
+  "require-dev": {
+    "imagine/imagine": ">=0.2.0,<0.6.0",
+    "phpunit/phpunit": ">=4,<5.4.0",
+    "zendframework/zend-barcode": "^2.0",
+    "zendframework/zend-validator": "^2.0"
+  },
+  "suggest": {
+    "imagine/imagine": "If you want to use image generating (required version: >=v0.2.6)",
+    "zendframework/zend-barcode": "If you want to use barcodes",
+    "zendframework/zend-validator": "If you want to use barcodes (required by zend-barcode)"
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-0": {
+      "PHPPdf": "lib/",
+      "Imagine": "lib/"
     }
+  }
 }
