--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: php
 
-php:
-  - 7.2
-  - 7.3
+matrix:
+  include:
+    - php: 7.2
+  fast_finish: true
 
 before_script:
   - composer self-update
