switch to psr-4 autoloading

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     "sort-packages": true
   },
   "autoload": {
-    "psr-0": {
-      "PHPPdf": "lib/"
+    "psr-4": {
+      "PHPPdf\\": "lib/PHPPdf/"
     }
   }
 }
